# purkinje-learning

./: .gitignore  ECG_BO_demo.ipynb  ECG_BO_demo.py  MyocardialMesh.py  bo_ecg.py  bo_purkinje_demo.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: codex-review.yml
Demo/: run_demo.ps1  run_workflow_demo.ps1
JAX-BO/jaxbo.egg-info/: PKG-INFO
PurkinjeECG/: .gitignore  Myocardium_demo.py
PurkinjeECG/PurkinjeUV/: FractalTreeUV.py
examples/: ECG_BO_demo.ipynb  ECG_BO_results.ipynb
profiling/: profile.ps1
src/: bo_ecg.py  bo_purkinje_tree.py  ecg_pipeline.py  ecg_reference_demo.py
src/bo_utils/: enums.py
tests/: test_bo_ecg.py  test_bo_purkinje_tree.py
