[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purkinje-learning"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = []
keywords = []

dependencies = [
    "numpy",
    "scipy",
    "meshio",
    "jaxbo",
    "jaxlib",
    "jax",
    "fim-python",
    "vtk",
    "myocardial-mesh",
    "purkinje-uv",
    "pyvista",
    "pandas",
    "seaborn"
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.ruff]
target-version = "py310"

[tool.black]
target-version = ['py310']